new：添加AMemory缓存机制 update :调整BaseTBActivity new：添加UserVM new：添加上传图片界面、保存图片功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
     <activity android:name=".module.picture.PictureActivity" />
     <activity android:name=".module.auth.SignUpActivity" />
     <activity android:name=".module.auth.LoginActivity" />
+    <activity android:name=".module.picture.PostPicActivity" />
   </application>
 
 </manifest>
