new：完成头像、昵称编辑 new：完成图片上传 new：完成游记上传 new：添加WebActivity new：添加AMemoryJava版本 new：添加线程管理，暂未用上

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
   <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.READ_LOGS"/>
+  <!--保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
   <application
       android:name=".HytApp"
       android:allowBackup="true"
@@ -32,6 +34,9 @@
     <activity android:name=".module.auth.SignUpActivity" />
     <activity android:name=".module.auth.LoginActivity" />
     <activity android:name=".module.picture.PostPicActivity" />
+    <activity android:name=".module.comm.WebActivity" />
+    <activity android:name=".module.trip.PostJourneyActivity" />
+    <activity android:name=".module.profile.EditUserInfoActivity" />
   </application>
 
 </manifest>
