--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,14 @@ android {
     }
   }
   buildTypes {
+    debug {
+      minifyEnabled false
+      shrinkResources false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    }
     release {
       minifyEnabled false
+      shrinkResources false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
@@ -59,24 +65,24 @@ dependencies {
 
   //网络
   //  implementation 'com.squareup.okio:okio:1.13.0'
-//    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+  //    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
   //  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
   //  implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
-//    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+  //    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
-//  implementation 'com.badoo.mobile:android-weak-handler:1.1'
+  //  implementation 'com.badoo.mobile:android-weak-handler:1.1'
 
-//  implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+  //  implementation 'com.squareup.okhttp3:okhttp:3.9.1'
   implementation('com.squareup.retrofit2:retrofit:2.3.0') {
     exclude group: 'com.squareup.okhttp3'
   }
   implementation('org.ligboy.retrofit2:converter-fastjson-android:2.1.0') {
     exclude group: 'com.squareup.okhttp3'
   }
-//  implementation('com.squareup.retrofit2:converter-gson:2.3.0') {
-//    exclude group: 'com.google.code.gson'
-//    exclude group: 'com.squareup.okhttp3'
-//  }
+  //  implementation('com.squareup.retrofit2:converter-gson:2.3.0') {
+  //    exclude group: 'com.google.code.gson'
+  //    exclude group: 'com.squareup.okhttp3'
+  //  }
   implementation('com.squareup.okhttp3:logging-interceptor:3.3.1') {
     exclude group: 'com.squareup.okhttp3'
   }
@@ -122,9 +128,9 @@ dependencies {
 
   //bmob-sdk
   implementation 'cn.bmob.android:bmob-sdk:3.5.5'
-//  implementation('cn.bmob.android:bmob-sdk:3.5.5') {
-//    exclude group: 'com.squareup.okhttp3'
-//  }
+  //  implementation('cn.bmob.android:bmob-sdk:3.5.5') {
+  //    exclude group: 'com.squareup.okhttp3'
+  //  }
 
   implementation 'com.github.bumptech.glide:glide:4.4.0'
   implementation 'com.github.bumptech.glide:annotations:4.4.0'
